<resources>
    <string name="app_name">LostFound</string>
    <string name="waterfall_item_title">丢失物品的标题</string>
    <string name="waterfall_item_typeText">丢失物品的种类</string>
    <string name="waterfall_item_timeText">2017/07/03</string>
    <string name="waterfall_item_placeText">大学生活动中心</string>
    <string name="release_updatePic">发布照片</string>
    <string name="release_moreInfo">详细信息</string>
    <string name="mylist_status">物品状态</string>
    <string name="mylist_item_title">mylist_item_title</string>
    <string name="mylist_item_type">mylist_item_type</string>
    <string name="mylist_item_time">mylist_item_time</string>
    <string name="mylist_item_place">mylist_item_place</string>
    <string name="success_success">发布成功</string>
    <string name="success_share_text_title">分享到</string>
    <string name="success_share_wechatfriends">微信好友</string>
    <string name="success_share_wechatzone">朋友圈</string>
    <string name="success_share_qqfriends">QQ好友</string>
    <string name="success_share_qzone">QQ空间</string>
</resources>
