<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/waterfall_pic1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mylist_item_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/mylist_status" />
                </LinearLayout>

                <TextView
                    android:id="@+id/mylist_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/mylist_item_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/waterfall_type" />

                    <TextView
                        android:layout_marginStart="4dp"
                        android:id="@+id/mylist_item_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mylist_item_type" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/waterfall_time" />

                    <TextView
                        android:layout_marginStart="4dp"
                        android:id="@+id/mylist_item_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mylist_item_time" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/waterfall_place" />

                    <TextView
                        android:layout_marginStart="4dp"
                        android:id="@+id/mylist_item_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mylist_item_place" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>