<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="168dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/waterfall_item_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/waterfall_pic1" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:id="@+id/waterfall_item_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waterfall_item_title" />

            <LinearLayout
                android:layout_marginTop="6dp"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/lost_type" />

                <TextView
                    android:layout_marginStart="4dp"
                    android:id="@+id/waterfall_item_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/waterfall_item_typeText" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/lost_time" />

                <TextView
                    android:layout_marginStart="4dp"
                    android:id="@+id/waterfall_item_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/waterfall_item_timeText" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/lost_place" />

                <TextView
                    android:layout_marginStart="4dp"
                    android:id="@+id/waterfall_item_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/waterfall_item_placeText" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>