<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mylist_item_pic"
                android:layout_width="108dp"
                android:layout_height="88dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/mylist_status_linear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/mylist_item_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/mylist_status"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="12dp">

                            <ImageView
                                android:layout_centerInParent="true"
                                android:id="@+id/mylist_item_back_grey"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:src="@drawable/lf_back_grey" />

                            <ImageView
                                android:layout_centerInParent="true"
                                android:id="@+id/mylist_item_back_blue"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:src="@drawable/lf_back_blue" />
                        </RelativeLayout>
                    </LinearLayout>


                    <ImageView
                        android:id="@+id/mylist_item_pencil"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/lf_pencil" />

                    <TextView
                        android:id="@+id/mylist_item_pencil_touch"
                        android:layout_width="56dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/mylist_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/mylist_item_title"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/lf_type" />

                    <TextView
                        android:id="@+id/mylist_item_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/mylist_item_type" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/lf_time" />

                    <TextView
                        android:id="@+id/mylist_item_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/mylist_item_time" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/lf_place" />

                    <TextView
                        android:id="@+id/mylist_item_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/mylist_item_place" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>